# image-model

./: .gitignore  README.md  pyproject.toml
data/: README.md
models/: README.md
runs/: README.md
scripts/: check_model.py  download_cifar10.py  eval_tinycnn.py  infer_tinycnn.py  readme.md  smoke_cifar10_loader.py  train_cifar10_tinycnn.py
src/data/: __init__.py  cifar10.py  food101.py
src/imagemodel/: __init__.py
src/imagemodel/models/: tiny_cnn.py
src/models/: __init__.py  test_candidate.py  test_candidate_2_group_norm.py  test_candidate_4_resnet_big_block.py  test_candidate_5_resnet_pre_activation.py  test_candidate_cuda0.py  test_candidate_cuda1.py
src/models/CNNs/: __init__.py  kilo_cnn.py  micro_cnn.py  milli_cnn.py  standard_cnn.py  test_candidate_1_res.py  test_candidate_4_resnet_big_block.py  test_candidate_cuda0.py
src/models/VITs/: __init__.py  kilo_vit.py  micro_vit.py  mini_vit.py  nano_vit.py  standard_vit.py  vit_blocks.py
src/scripts/download/: download_cifar10.py  download_food101.py
src/scripts/train/: train.py
src/scripts/train/cnn/: advanced_train.py  train.py
src/scripts/train/vit/: train.py
